feat(ws): delete required metadata ddi to fo (#1298)